testing/manuela/iot-frontend-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: iot-frontend
    app.kubernetes.io/part-of: ManuELA
  name: iot-frontend
  namespace: iotdemo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: iot-frontend
    deploymentconfig: iot-frontend
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: iot-frontend
        deploymentconfig: iot-frontend
    spec:
      containers:
      - image: iot-frontend:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /home
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: iot-frontend
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /home
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/output/conf/config.json
          name: iot-frontend-cfg-vol
          subPath: config.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 438
          name: iot-frontend-cfg
        name: iot-frontend-cfg-vol
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - iot-frontend
      from:
        kind: ImageStreamTag
        name: iot-frontend:latest
    type: ImageChange
