testing/manuela/iot-software-sensor-2-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: broker-amq-mqtt-ss
  labels:
    app.kubernetes.io/part-of: ManuELA
    application: iot-software-sensor-2
    template: openjdk18-web-basic-s2i
  name: iot-software-sensor-2
  namespace: iotdemo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentConfig: iot-software-sensor-2
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: iot-software-sensor-2
        deploymentConfig: iot-software-sensor-2
      name: iot-software-sensor-2
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: iot-software-sensor-2-config
        image: iot-software-sensor:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: iot-software-sensor-2
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 75
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - iot-software-sensor-2
      from:
        kind: ImageStreamTag
        name: iot-software-sensor:latest
    type: ImageChange
  - type: ConfigChange
