testing/manuela/iot-consumer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-consumer
  name: iot-consumer
  namespace: iotdemo
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: iot-consumer
    deploymentconfig: iot-consumer
  sessionAffinity: None
  type: ClusterIP
