testing/manuela/03_components.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-consumer
  name: iot-consumer
  namespace: iotdemo
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: iot-consumer
    deploymentconfig: iot-consumer
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-frontend
  name: iot-frontend
  namespace: iotdemo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: iot-frontend
    deploymentconfig: iot-frontend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: broker-amq-mqtt-ss,iot-frontend
  labels:
    app: iot-consumer
    app.kubernetes.io/part-of: ManuELA
  name: iot-consumer
  namespace: iotdemo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: iot-consumer
    deploymentconfig: iot-consumer
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: iot-consumer
        deploymentconfig: iot-consumer
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: iot-consumer-cfg
        image: iot-consumer:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: iot-consumer
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - iot-consumer
      from:
        kind: ImageStreamTag
        name: iot-consumer:latest
    type: ImageChange
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: iot-frontend
    app.kubernetes.io/part-of: ManuELA
  name: iot-frontend
  namespace: iotdemo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: iot-frontend
    deploymentconfig: iot-frontend
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: iot-frontend
        deploymentconfig: iot-frontend
    spec:
      containers:
      - image: iot-frontend:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /home
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: iot-frontend
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /home
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/output/conf/config.json
          name: iot-frontend-cfg-vol
          subPath: config.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 438
          name: iot-frontend-cfg
        name: iot-frontend-cfg-vol
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - iot-frontend
      from:
        kind: ImageStreamTag
        name: iot-frontend:latest
    type: ImageChange
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: broker-amq-mqtt-ss
  labels:
    app.kubernetes.io/part-of: ManuELA
    application: iot-software-sensor
    template: openjdk18-web-basic-s2i
  name: iot-software-sensor
  namespace: iotdemo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentConfig: iot-software-sensor
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: iot-software-sensor
        deploymentConfig: iot-software-sensor
      name: iot-software-sensor
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: iot-software-sensor-config
        image: iot-software-sensor:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: iot-software-sensor
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 75
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - iot-software-sensor
      from:
        kind: ImageStreamTag
        name: iot-software-sensor:latest
    type: ImageChange
  - type: ConfigChange
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: broker-amq-mqtt-ss
  labels:
    app.kubernetes.io/part-of: ManuELA
    application: iot-software-sensor-2
    template: openjdk18-web-basic-s2i
  name: iot-software-sensor-2
  namespace: iotdemo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentConfig: iot-software-sensor-2
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: iot-software-sensor-2
        deploymentConfig: iot-software-sensor-2
      name: iot-software-sensor-2
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: iot-software-sensor-2-config
        image: iot-software-sensor:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: iot-software-sensor-2
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 75
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - iot-software-sensor-2
      from:
        kind: ImageStreamTag
        name: iot-software-sensor:latest
    type: ImageChange
  - type: ConfigChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: iot-consumer
  name: iot-consumer
  namespace: iotdemo
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: iot-consumer
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: iot-frontend
  name: iot-frontend
  namespace: iotdemo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: iot-frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
