testing/manuela/iot-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: iot-frontend
  name: iot-frontend
  namespace: iotdemo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: iot-frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
